refactor(sync-over-async): clear three IDE code smells + cosmetic tidy-ups (#386)
Quality-only follow-up to the clustered-Redis work (#385), no behaviour change:
- PendingRequests.remove() no longer returns an unused CompletableFuture (void;
  it is private and only cancel() calls it).
- RedisBackendFactory.detectCluster folds the probe RedisClient into
  try-with-resources, dropping the manual finally (equivalent: an AUTO-mode
  create failure is caught as inconclusive then re-surfaces at the standalone
  build to the health check's waiting path).
- RedisBackendFactoryTest gains explicitClusterModeRoutesToTheClusterBranch so
  the clusterEnabled parameter is exercised (the cluster client fails topology
  discovery against the single-node embedded server, proving the boolean routes
  to the cluster branch); the success path stays field-validated.
Plus cosmetic IDE tidy-ups (SLF4J throwable arg, List.getFirst(), javadoc/comment
wording). sync-over-async 86/86 green.

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>